log
Thu Mar 17 21:33:18 UTC 2022: 
 list.c | 83 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++----------
 1 file changed, 71 insertions(+), 12 deletions(-)
 tests:  0|0
11df652
Thu Mar 17 21:38:41 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b4e3910
Sat Mar 19 16:31:50 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:40:10: error: incompatible types when returning type ‘Node {aka struct Node}’ but ‘void *’ was expected
   return *(list->current);
          ^~~~~~~~~~~~~~~~
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
97cb8d7
Sat Mar 19 16:31:58 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fe7b999
Sat Mar 19 17:31:14 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|4
total_score: 20/70
bfe302d
Sat Mar 19 17:40:39 UTC 2022: 
 list.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
62a2083
Sat Mar 19 17:42:57 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 30/70
b3bbbd5
Sat Mar 19 17:50:38 UTC 2022: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  3|3
total_score: 30/70
bad8b74
Sat Mar 19 17:51:16 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:40:12: error: format ‘%i’ expects argument of type ‘int’, but argument 2 has type ‘Node {aka struct Node}’ [-Werror=format=]
   printf("%i", *(list->current));
           ~^   ~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
becd2eb
Sat Mar 19 17:51:44 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:40:16: error: dereferencing ‘void *’ pointer [-Werror]
   printf("%i", *(list->current->data));
                ^~~~~~~~~~~~~~~~~~~~~~
list.c:40:16: error: invalid use of void expression
   printf("%i", *(list->current->data));
                ^
cc1: all warnings being treated as errors
Compilation failed
eebf382
Sat Mar 19 17:52:44 UTC 2022: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
b31dac6
Sat Mar 19 17:53:37 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:39:27: error: ‘return’ with no value, in function returning non-void [-Werror]
   if (list->head == NULL) return;
                           ^~~~~~
list.c:38:8: note: declared here
 void * firstList(List * list) {
        ^~~~~~~~~
list.c: In function ‘lastList’:
list.c:50:28: error: ‘return’ with no value, in function returning non-void [-Werror]
    if (list->tail == NULL) return;
                            ^~~~~~
list.c:49:8: note: declared here
 void * lastList(List * list) {
        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e368cca
Sat Mar 19 17:53:51 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
40a89f5
